apps/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    traefik.enable: 'true'
    traefik.frontend.rule: Host:sabnzbd.lab.emc2.build
    traefik.port: '8080'
  labels:
    app: sabnzbd
  name: sabnzbd
  namespace: media
spec:
  selector:
    matchLabels:
      app: sabnzbd
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        traefik.enable: 'true'
        traefik.frontend.rule: Host:sabnzbd.lab.emc2.build
        traefik.port: '8080'
      labels:
        app: sabnzbd
    spec:
      containers:
      - env:
        - name: PGID
          value: '1000'
        - name: PUID
          value: '1000'
        - name: TZ
          value: America/Vancouver
        image: lscr.io/linuxserver/sabnzbd:latest
        imagePullPolicy: IfNotPresent
        name: sabnzbd
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 25m
            memory: 128Mi
          limits:
            cpu: "2"
            memory: 512Mi
        volumeMounts:
        - mountPath: /config
          name: sabnzbd-config
        - mountPath: /downloads
          name: media-library
        - mountPath: /temp-storage
          name: temp-storage
      securityContext:
        fsGroup: 1000
      hostname: sabnzbd
      restartPolicy: Always
      tolerations:
      - key: "maintenance"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 60
      # This DNS config modifies /etc/resolv.conf. Needed so that news.newshosting.com can resolve outside of the cluster,
      # and not get trapped in the wildcard that leads back to lab.emc2.build.
      dnsConfig:
        # nameservers: ["8.8.8.8"]
        options:
          - name: ndots
            value: "1"
      volumes:
      - name: sabnzbd-config
        persistentVolumeClaim:
          claimName: sabnzbd-config
      - name: media-library
        persistentVolumeClaim:
          claimName: media-library
      - name: temp-storage
        emptyDir:
          #medium: Memory
          sizeLimit: 120Gi
