apps/sabnzbd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
spec:
  selector:
    app: sabnzbd
  ports:
  - name: sabnzbd
    targetPort: 8080
    port: 80
