apps/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: http-to-https-redirect-media@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: sabnzbd
  namespace: media
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - sabnzbd.lab.emc2.build
    secretName: sabnzbd-letsencrypt-tls
  rules:
  - host: sabnzbd.lab.emc2.build
    http:
      paths:
      - backend:
          service:
            name: sabnzbd
            port:
              number: 8080
        path: /
        pathType: Prefix
